fixing spacing

--- a/src/todo.css
+++ b/src/todo.css
@@ -196,7 +196,7 @@ label[for='toggle-all'] {
 .todo-list li label {
 	white-space: pre-line;
 	word-break: break-all;
-	padding: 15px 170px 15px 15px;
+	padding: 15px 60px 15px 15px;
 	margin-left: 45px;
 	display: block;
 	line-height: 1.2;
